# EM_recon_pipeline

./: README.md  create_environment.sh  janelia_emrp.environment.yml  janelia_emrp_3_12.environment.yml  pyproject.toml
doc/cellmap/: fibsem-transfer-flow.md  project_management.md  recon_p01_render_import.md  summary.md
doc/cellmap/steps/: 1_transfer.md  2-1_render_import.md  2-2_alignment_prep.md  2-3_review_matches.md  2-4_alignment_solve.md
doc/flyem/Z0720_07m/: recon_p01_render_import.md  recon_p02_alignment_prep.md  recon_p03_review_matches.md  recon_p04_alignment_solve.md
src/janelia_emrp/fibsem/: dat_to_render.py  print_header.py
src/janelia_emrp/gcibmsem/: plot_tiles.py
src/janelia_emrp/render/: patch_tile_specs.py
src/janelia_emrp/zcorr/: plot_cross_correlation.py  plot_z_coords.py
src/matlab/fibsem/: fibsem2tiff.m  readfibsem.m
src/nextflow/: nextflow.config
src/python/janelia_emrp/: cluster.py  dask_bag_test.py  root_logger.py
src/python/janelia_emrp/fibsem/: aggregate_metadata.py  cyx_dat.py  dat_clipper.py  dat_converter.py  dat_converter_submitter.py  dat_copier.py  dat_keep_file.py  dat_path.py  dat_sweeper.py  dat_to_h5_writer.py  dat_to_render.py  dat_to_scheffer_8_bit.py  dat_to_scheffer_8_bit_layer.py  h5_archivist.py  h5_dat_name_helper.py  h5_raw_to_align.py  h5_to_dat.py  h5_to_render.py  mask_builder.py  print_dat_header.py  print_h5_headers.py  print_header.py  render_api.py  volume_transfer_info.py
src/python/janelia_emrp/gcibmsem/: gcibmsem_to_render.py  plot_tiles.py  scan_fit_parameters.py  slab_info.py  wafer_info.py
src/python/janelia_emrp/match/: copy_matches.py  count_match_pairs.py  delete_all_matches_for_owner.py  delete_match_pairs.py  delete_matches.py  find_matches.py  list_match_counts.py  move_matches.py  plot_match_counts_for_cell.py  plot_match_counts_for_edge.py
src/python/janelia_emrp/msem/: field_of_view_layout.py  google_n5_export_preview.py  msem_tile_trimmer.py  msem_to_render.py  plot_stack_alignment_errors.py  plot_tiles.py  render_sfov_order.py  scan_fit_parameters.py  single_slab_info.py  single_slab_info_plot.py  slab_info.py  tile_id.py  wafer_53_hayworth_adjust_sfov_contrast.py  wafer_60_to_gcloud.py  wafer_info.py
src/python/janelia_emrp/render/: add_mask.py  add_transform_data_to_downsampled_n5_levels.py  insert_missing_tile_spec.py  patch_scan_correction_transforms.py  patch_tile_spec_dynamic_mask.py  patch_tile_spec_intensities.py  patch_tile_spec_source_paths.py  patch_tile_specs.py  plot_distance_z.py  summarize_projects.py  web_service_request.py
src/python/janelia_emrp/zcorr/: find_large_delta_z.py  plot_cross_correlation.py  plot_curve_fit.py  plot_regional_cross_correlation.py  plot_util.py  plot_z_coords.py  scale_delta_z.py  scale_z_coords.py  scope_cross_correlation.py
src/resources/transfer_info/cellmap/: jrc_axolotl-liver-2.json  volume_transfer_info.jrc_22ak351-leaf-2lb.json  volume_transfer_info.jrc_22ak351-leaf-3mb.json  volume_transfer_info.jrc_22ak351-leaf-3rb.json  volume_transfer_info.jrc_alta24-b9_4nm.json  volume_transfer_info.jrc_amphiuma-means-heart-1.json  volume_transfer_info.jrc_amphiuma-means-liver-1.json  volume_transfer_info.jrc_aphid-salivary-1.json  volume_transfer_info.jrc_atla114-224-1.json  volume_transfer_info.jrc_atla114_224_1.json  (+81 more)
src/resources/wafer_53/: SAVED_BEAM_BLANK_ARRAY.npy  SAVED_NORMALIZATION_ARRAY.npy
src/scripts/cellmap/: 61_promote_final_n5.sh  cleanup_volume.sh  gen_github_text.sh  link_z_corr.sh  setup_volume.sh
src/scripts/fibsem/: multi_row_alignment_parameters.json  print_volume_compute_costs.sh  setup-jrc_tough-resin_RD_part2.sh  single_row_alignment_parameters.json  single_tile_small_cell_alignment_parameters.json
src/scripts/gcibmsem/: 01_msem_to_render.sh
src/scripts/msem/: 00_config.sh  01_msem_to_render.sh  03_spark_gen_mipmaps.sh  05_report_spark_match_stats.sh  11_hayworth_ic_slab.sh  12_hayworth_ic_slab_bsub.sh  13_hayworth_ic_import.sh  14_hayworth_ic_import_all.sh  find_match_pair_log.sh
src/scripts/msem_53/: 00_config.sh  02_spark_alignment_pipeline.sh  03_spark_gen_mipmaps.sh  04_spark_gen_matches.sh  15_hayworth_export_all_n5s.sh  spark_render_to_n5.sh
src/scripts/msem_53_center/: 00_config.sh
src/scripts/msem_60_61/: 00_config.sh  01_msem_to_render.sh  02_trim_msem_tiles.sh  03_spark_alignment_pipeline.sh  04_spark_align_big_worker.sh  11_gen_shading_run.sh  12_spark_render_to_n5.sh  13_spark_normalize_layer_intensity.sh  21_spark_clahe_hack.sh  91_rsync_slab.sh  92_copy_fit_parameters.sh  93_gen_preview_run.sh  99_create_ic2d_test_stacks.sh  99_render_box_with_tile_ids.sh  slab_info.w60.txt  slab_info.w61.txt
src/scripts/msem_66/: 00_config.sh  01_convert_fic_txt_to_json.sh  03_spark_alignment_pipeline.sh  full_image_coordinates.txt.scan_000303.json  setup_directories.sh
src/scripts/msem_68/: 00_config.sh  01_full_img_coords_to_json.sh  02_msem_to_render.sh  03_bg_correct_and_invert_images.sh  04_spark_align_big_worker.sh  05_spark_align_big_worker.sh  06_bg_correct_and_invert_images.sh  06_spark_ic2d.sh  07_spark_normalize_layer_intensity.sh  12_spark_render_to_n5.sh  21_copy_from_nrs_to_google.sh  setup_directories.sh  test-scan-parameters.sh
(+430 files in other folders)
