[project]
name = "janelia-emrp"
version = "0.1.0"
description = "Pipeline scripts and tools for reconstructing Electron Microscopy volumes."
authors = [{name = "Eric Trautman", email = "trautmane@janelia.hhmi.org"}]
license = "BSD-3-Clause"
requires-python = ">= 3.9"
dependencies = ["fibsem-tools==0.3.1", "dask-janelia>=0.1.4", "xarray-multiscale==0.3.1", "render-python @ git+https://github.com/AllenInstitute/render-python.git"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/python/janelia_emrp"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "osx-64", "linux-64", "win-64"]

[tool.pixi.pypi-dependencies]
janelia-emrp = { path = ".", editable = true }

[tool.pixi.dependencies]
urllib3 = "==1.26"
bokeh = ">=2.3.3,<3.0.0"
h5py = ">=3.6.0"
pandas = ">=1.2.3,<2.0.0"
pytest = ">=7.1.1"
pydantic = ">=1.9.0,<2.0.0"
numpy = "==1.21.0"
typed-ast = "==1.4.3"
