[project]
name = "janelia-emrp"
version = "0.2.0"
description = "Pipeline scripts and tools for reconstructing Electron Microscopy volumes."
authors = [{name = "Eric Trautman", email = "trautmane@janelia.hhmi.org"}]
license = "BSD-3-Clause"
requires-python = ">= 3.12"
dependencies = [
    "fibsem-tools==7.0.5",
    "dask-jobqueue",  # For LSFCluster support (dask-janelia functionality vendored locally)
    "xarray-multiscale>=0.3.3",
    "render-python @ git+https://github.com/AllenInstitute/render-python.git",
    "matplotlib",
    "google-cloud-storage>=2.19.0",
    "opencv-python>=4.10.0",
    "basicpy"
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/python/janelia_emrp"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "osx-64", "linux-64", "win-64"]

[tool.pixi.pypi-dependencies]
janelia-emrp = { path = ".", editable = true }

[tool.pixi.dependencies]
python = ">=3.12"
urllib3 = ">=1.26,<2.0"
bokeh = ">=2.3.3,<4.0.0"
h5py = ">=3.6.0"
pandas = ">=1.5.0,<3.0.0"
pytest = ">=7.1.1"
pydantic = ">=2.7.0"
numpy = ">=1.26.0,<2.0.0"
scikit-image = ">=0.22.0"

# see https://docs.pytest.org/en/stable/how-to/capture-warnings.html
[tool.pytest.ini_options]
filterwarnings = [
    "ignore:::dask_jobqueue[.*]",
    "ignore:::distutils[.*]",
    "ignore:::fibsem_tools[.*]",
    "ignore:::pandas[.*]",
    "ignore:::renderapi[.*]",
    "ignore:::requests[.*]",
    "ignore:::tensorstore",        # TODO: why does tensorstore filter not work?
    "ignore:DeprecationWarning::"  # TODO: remove when tensorstore filter is fixed
]
